Página de login de médico implementada, dalta pulir estilos. Creación de carpeta de servicios. Implementación de estilos globales como variables

--- a/frontend/SAMI/src/app/views/login-medico/login-medico.component.html
+++ b/frontend/SAMI/src/app/views/login-medico/login-medico.component.html
@@ -1,1 +1,23 @@
-<p>login-medico works!</p>
+<div class="container">
+    <div class="left-section">
+      <h1 class="title-left-section">BotAssist: SAMI</h1>
+      <p>(salud, asistencia, medicina, ia)</p>
+      <img src="../../../assets/images/doctors.png" alt="Doctors">
+    </div>
+    <div class="right-section">
+      <h2 class="welcome-title" >Bienvenido de nuevo</h2>
+      <form>
+        <label class="label-form" for="cedula">Número de cédula:</label>
+        <input type="text" id="cedula" name="cedula">
+
+        <label class="label-form" for="password">Contraseña:</label>
+        <input type="password" id="password" name="password">
+
+        <a href="#" class="forgot-password">Recuperar mi contraseña</a>
+        
+        <button type="submit" class="login-button">INGRESAR</button>
+      </form>
+    </div>
+  </div>
+
+  
