--- a/frontend/SAMI/src/app/views/login-medico/login-medico.component.css
+++ b/frontend/SAMI/src/app/views/login-medico/login-medico.component.css
@@ -36,6 +36,9 @@ body {
     width: 50%;
     background-color: white;
     padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
   .right-section .welcome-title {
@@ -43,7 +46,7 @@ body {
     color: var(--light-blue-principal);
     margin-bottom: 20px;
     text-align: center;
-  }
+  }  
   
   .right-section .label-form {
     display: block;
@@ -53,8 +56,8 @@ body {
   }
   
   .right-section input {
+    width: 400px;
     background: var(--second-elements-color);
-    width: 100%;
     padding: 10px;
     margin-bottom: 15px;
     border: none;
@@ -80,4 +83,17 @@ body {
     font-size: 16px;
     border-radius: 10px;
     cursor: pointer;
+    width: 50%;
+  }
+
+  .login-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .cont-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
