--- a/frontend/SAMI/src/app/views/login-medico/login-medico.component.html
+++ b/frontend/SAMI/src/app/views/login-medico/login-medico.component.html
@@ -1,24 +1,27 @@
 <div class="container">
-    <div class="left-section">
-      <h1 class="title-left-section">BotAssist: SAMI</h1>
-      <p>(salud, asistencia, medicina, ia)</p>
-      <img src="assets/images/doctors.png" alt="Doctors">
-    </div>
-    <div class="right-section">
-      <h2 class="welcome-title" >Bienvenido de nuevo</h2>
-      <form>
-        <div class="login-form">
+  <div class="left-section">
+    <h1 class="title-left-section">BotAssist: SAMI</h1>
+    <p>(salud, asistencia, medicina, ia)</p>
+    <img src="assets/images/doctors.png" alt="Doctors" />
+  </div>
+  <div class="right-section">
+    <h2 class="welcome-title">Bienvenido de nuevo</h2>
+    <form (submit)="login()">
+      <div class="login-form">
         <label class="label-form" for="cedula">Número de cédula:</label>
-        <input type="text" id="cedula" name="cedula">
+        <input type="text" id="cedula" [(ngModel)]="cedula" name="cedula" />
         <label class="label-form" for="password">Contraseña:</label>
-        <input type="password" id="password" name="password">
+        <input
+          type="password"
+          id="password"
+          [(ngModel)]="password"
+          name="password"
+        />
         <a href="#" class="forgot-password">Recuperar mi contraseña</a>
         <div class="cont-button">
-        <button type="submit" class="login-button">INGRESAR</button>
+          <button type="submit" class="login-button">INGRESAR</button>
         </div>
-        </div>
-      </form>
-    </div>
+      </div>
+    </form>
   </div>
-
-  
+</div>
