--- a/frontend/SAMI/src/app/components/slidebar/slidebar.component.html
+++ b/frontend/SAMI/src/app/components/slidebar/slidebar.component.html
@@ -1,1 +1,19 @@
-<p>slidebar works!</p>
+<div class="sidebar">
+    <div class="logo">
+      <img src="assets/images/Chatbot.png" alt="Logo SAMI" />
+      <h2>SAMI</h2>
+    </div>
+    <ul class="menu">
+      <li><a href="#gestion">Gestión de pacientes</a></li>
+      <li><a href="#citas">Citas médicas</a></li>
+    </ul>
+    <div class="profile">
+      <img src="user-profile.jpg" alt="Foto de perfil" />
+      <div>
+        <p>Carolina Alvarado</p>
+        <p>dexample.com</p>
+      </div>
+      <button class="logout-btn">Salir</button>
+    </div>
+  </div>
+  
