--- a/frontend/SAMI/src/app/components/slidebar/slidebar.component.html
+++ b/frontend/SAMI/src/app/components/slidebar/slidebar.component.html
@@ -4,14 +4,18 @@
       <h2>SAMI</h2>
     </div>
     <ul class="menu">
-      <li><a href="#gestion">Gestión de pacientes</a></li>
-      <li><a href="#citas">Citas médicas</a></li>
+      <h2 class="tittle-menu"> Menú</h2>
+      <li><a href="#gestion"><i class="fa-regular fa-address-book"></i>Gestión de pacientes</a></li>
+      <li><a href="#citas"> <i class="fa-regular fa-calendar"></i>Citas médicas</a></li>
     </ul>
     <div class="profile">
-      <img src="user-profile.jpg" alt="Foto de perfil" />
+      <h3>Perfil</h3>
+      <div class="dat-profile">
+        <img src="user-profile.jpg" alt="Foto de perfil" />
       <div>
         <p>Carolina Alvarado</p>
         <p>dexample.com</p>
+      </div>
       </div>
       <button class="logout-btn">Salir</button>
     </div>
