--- a/frontend/SAMI/src/app/views/login-medico/login-medico.component.html
+++ b/frontend/SAMI/src/app/views/login-medico/login-medico.component.html
@@ -19,7 +19,7 @@
         />
         <a href="#" class="forgot-password">Recuperar mi contraseña</a>
         <div class="cont-button">
-          <button type="submit" class="login-button">INGRESAR</button>
+          <button type="submit" class="button-standar">INGRESAR</button>
         </div>
       </div>
     </form>
