--- a/frontend/SAMI/src/styles.css
+++ b/frontend/SAMI/src/styles.css
@@ -1,11 +1,14 @@
 :root {
     /* variables de colores */
     --light-blue-principal: #5DABF5;
+    --light-blue-principal-hover: #0468c6;
     --second-elements-color: #F0F4FF;
     --second-text: #D1E0FF;
     --background-color: #857E8E;
     --titles-color: #4B4B4B;
     --text-color: #000000;
+    --delete-color: #cb1b1b;
+    --green-button-color: #81DA7E;
 
     /* variables de tipografia */
     --title-style: 700 40px Roboto, sans-serif;
@@ -29,4 +32,14 @@ body, html {
   height: 100%;
 }
 
+.button-standar {
+  color: white;
+  font: var(--text-button-style);
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 50%;
+}
 
