Slidebar terminado, gestion de pacientes terminado, calendario d citas medicas pendiente

--- a/frontend/SAMI/src/app/components/slidebar/slidebar.component.html
+++ b/frontend/SAMI/src/app/components/slidebar/slidebar.component.html
@@ -17,7 +17,7 @@
         <p>dexample.com</p>
       </div>
       </div>
-      <button (click)="logout()" class="logout-btn">Salir</button>
+      <button (click)="logout()" class="logout-btn"> <i class="fa-solid fa-right-from-bracket"></i> Salir</button>
     </div>
   </div>
 
