--- a/frontend/SAMI/src/app/views/citas-medicas/citas-medicas.component.html
+++ b/frontend/SAMI/src/app/views/citas-medicas/citas-medicas.component.html
@@ -1,3 +1,17 @@
+<div class="dashboard">
+  <app-slidebar></app-slidebar>
 <div class="container">
   <h1>Citas médicas</h1>
+  <div class="items-dashboard">
+    <div class="calendar">
+      aqui el calendario
+    </div>
+    <div class="pendient-date">
+      <h1> Solicitudes pendientes </h1>
+      <div class="pendient-notification">
+        
+      </div>
+    </div>
+  </div>
+</div>
 </div>
