--- a/frontend/SAMI/src/app/views/dashboard-principal/dashboard-principal.component.html
+++ b/frontend/SAMI/src/app/views/dashboard-principal/dashboard-principal.component.html
@@ -8,9 +8,7 @@
           type="text"
           placeholder="Buscar paciente (Cédula, nombres ...)"
         />
-        <button>
-          <i class="material-icons">search</i>
-        </button>
+        <button class="search-button">Buscar</button>
       </div>
       <button class="add-patient">+ Nuevo paciente</button>
     </header>
