--- a/frontend/SAMI/src/app/components/slidebar/slidebar.component.css
+++ b/frontend/SAMI/src/app/components/slidebar/slidebar.component.css
@@ -78,6 +78,7 @@ body {
     display: flex;
     align-items: start;
     flex-direction: column;
+    font: var(--text-style);
   }
 
   .sidebar .profile .dat-profile {
@@ -98,19 +99,19 @@ body {
   }
   
   .sidebar .logout-btn {
-    background-color: #ff4b4b;
-    color: white;
+    background-color: white;
+    color: var(--light-blue-principal);
     border: none;
     padding: 10px;
-    border-radius: 8px;
+    border-radius: 10px;
     margin-top: 10px;
     cursor: pointer;
-    font-size: 14px;
     width: 100%;
     text-align: center;
+    font: var(--text-button-style);
   }
   
   .sidebar .logout-btn:hover {
-    background-color: #cc3939;
+    background-color: #f2f2f2;
   }
   
