--- a/frontend/SAMI/src/app/views/historial-clinico-paciente/historial-clinico-paciente.component.html
+++ b/frontend/SAMI/src/app/views/historial-clinico-paciente/historial-clinico-paciente.component.html
@@ -1,55 +1,49 @@
 <div class="dashboard">
-    <app-slidebar></app-slidebar>
-    <div class="content">
-      <header>
-        <h1>Gestión de pacientes</h1>
-        <button class="add-history">+ Nueva historia</button>
-      </header>
-  
-      <div class="patient-data">
-        <div class="patient-info">
-          <img src="paciente.png" alt="paciente">
-          <div *ngFor="let paciente of listaPacientes" class="info">
-            <h3 class="data-patient">{{ paciente.nombres + paciente.apellidos }}</h3>
-            <p class="data-patient">{{ paciente.cedula }}</p>
-            <p class="data-patient">{{ paciente.telefono }}</p>
-            <p class="data-patient">{{ paciente.correo }}</p>
-          </div>
-        </div>
-  
-        <div class="history-chart">
-          <h3>Estado de glucosa</h3>
-          <!-- <app-line-chart [data]="waitingListData"></app-line-chart> -->
-        </div>
-  
-        <div class="history-list">
-          <h3>Historial Clínico</h3>
-          <table>
-            <thead>
-              <tr>
-                <th class="title-column">Fecha de consulta</th>
-                <th class="title-column">Motivo de consulta</th>
-                <th class="title-column">Acciones</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let paciente of listaPacientes">
-                <ng-container *ngFor="let historia of paciente.history" class="items">
-                  <tr>
-                    <td class="date-history">{{ historia.fecha }}</td>
-                    <td class="description-history">{{ historia.descripcion }}</td>
-                    <td>
-                      <div class="actions">
-                        <button class="button-standar">Ver más</button>
-                        <!-- <button class="delete-action"><i class="fa-solid fa-trash-can"></i></button> -->
-                      </div>
-                    </td>
-                  </tr>
-                </ng-container>
-              </tr>
-            </tbody>
-          </table>
+  <app-slidebar></app-slidebar>
+  <div class="content">
+    <header>
+      <h1>Gestión de pacientes</h1>
+      <button class="add-history">+ Nueva historia</button>
+    </header>
+
+    <div class="patient-data">
+      <div class="patient-info">
+        <img src="./../../../assets/images/Chatbot.png" alt="paciente" />
+        <div *ngFor="let paciente of listaPacientes" class="info">
+          <h3 class="data-patient-name">
+            {{ paciente.nombres + paciente.apellidos }}
+          </h3>
+          <p class="data-patient">CI: {{ paciente.cedula }}</p>
+          <p class="data-patient">Contacto: {{ paciente.telefono }}</p>
+          <p class="data-patient">Correo: {{ paciente.correo }}</p>
         </div>
       </div>
+
+      <div class="history-chart">
+        <h3>Estado de glucosa</h3>
+        <!-- <app-line-chart [data]="waitingListData"></app-line-chart> -->
+      </div>
+    </div>
+    <div class="history-container">
+      <h2 class="Subtitulo">Historial Clínico</h2>
+      <table class="history-table">
+        <thead>
+          <tr>
+            <th>Fecha de consulta</th>
+            <th>Motivo de consulta</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let record of consultationRecords">
+            <td>{{ record.date }}</td>
+            <td>{{ record.reason }}</td>
+            <td>
+              <button class="view-btn">Ver historial</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
+</div>
