--- a/frontend/SAMI/src/app/views/historial-clinico-paciente/historial-clinico-paciente.component.html
+++ b/frontend/SAMI/src/app/views/historial-clinico-paciente/historial-clinico-paciente.component.html
@@ -5,45 +5,44 @@
       <h1>Gestión de pacientes</h1>
       <button class="add-history">+ Nueva historia</button>
     </header>
+    <div class="consultation-container">
+      <section class="consultation-details">
+        <h2 class="section-title">DETALLES DE LA CONSULTA</h2>
+        <div class="consultation-date">20-Sep-2024, 09:00 AM</div>
 
-    <div class="patient-data">
-      <div class="patient-info">
-        <img src="./../../../assets/images/Chatbot.png" alt="paciente" />
-        <div *ngFor="let paciente of listaPacientes" class="info">
-          <h3 class="data-patient-name">
-            {{ paciente.nombres + paciente.apellidos }}
-          </h3>
-          <p class="data-patient">CI: {{ paciente.cedula }}</p>
-          <p class="data-patient">Contacto: {{ paciente.telefono }}</p>
-          <p class="data-patient">Correo: {{ paciente.correo }}</p>
+        <h3 class="consultation-diagnosis">
+          EDEMA DE MIEMBRO INFERIOR IZQUIERDO
+        </h3>
+
+        <div class="medical-info">
+          <div class="info-section">
+            <h4 class="info-title">Enfermedad o problema actual</h4>
+            <p>
+              PACIENTE REFIERE DESDE HACE UNA SEMANA DOLOR Y EDEMA A NIVEL DE
+              MIEMBRO INFERIOR IZQUIERDO
+            </p>
+          </div>
+
+          <div class="info-section">
+            <h4 class="info-title">Exámen físico</h4>
+            <p>
+              PULSOS ARTERIALES PRESENTES SE EVIDENCIA PRESENCIA DE EDEMA A
+              NIVEL PERIMALEOLAR DERECHO
+            </p>
+          </div>
+
+          <div class="info-section">
+            <h4 class="info-title">Diagnóstico</h4>
+            <p>INSUFICIENCIA VENOSA (CRONICA)</p>
+            <p class="diagnosis-code">(PERIFERICA) (I872)</p>
+          </div>
         </div>
-      </div>
+      </section>
 
-      <div class="history-chart">
-        <h3>Estado de glucosa</h3>
-        <!-- <app-line-chart [data]="waitingListData"></app-line-chart> -->
-      </div>
-    </div>
-    <div class="history-container">
-      <h2 class="Subtitulo">Historial Clínico</h2>
-      <table class="history-table">
-        <thead>
-          <tr>
-            <th>Fecha de consulta</th>
-            <th>Motivo de consulta</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let record of consultationRecords">
-            <td>{{ record.date }}</td>
-            <td>{{ record.reason }}</td>
-            <td>
-              <button class="view-btn">Ver historial</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <aside class="prescription">
+        <h2 class="section-title">RECETA</h2>
+        <!-- Contenido de la receta irá aquí -->
+      </aside>
     </div>
   </div>
 </div>
