--- a/frontend/SAMI/src/app/views/dashboard-principal/dashboard-principal.component.css
+++ b/frontend/SAMI/src/app/views/dashboard-principal/dashboard-principal.component.css
@@ -1,6 +1,7 @@
 .dashboard {
     display: flex;
     height: 100vh;
+    overflow: hidden;
 
   }
   .data-patient{
@@ -9,6 +10,7 @@
   .content {
     flex: 1;
     padding: 20px;
+    overflow-y: auto;
   }
   
   header {
@@ -71,6 +73,7 @@
     border-radius: 5px;
     cursor: pointer;
     background-color: var(--green-button-color);
+    font: var(--text-button-style);
   }
 
   .title-column{
@@ -114,8 +117,9 @@
 
 /* Botón para abrir el formulario */
 .open-form-button {
-  background: #60a5fa;
+  background: var(--light-blue-principal);
   color: white;
+  font: var(--text-button-style);
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
@@ -124,7 +128,7 @@
 }
 
 .open-form-button:hover {
-  background: #3b82f6;
+  background: var(--light-blue-principal-hover);
 }
 
 /* Modal styles */
@@ -153,9 +157,10 @@
 /* Form title - Add this to your HTML */
 .patient-form::before {
   content: "Agregar nuevo paciente";
+  font: var(--title-style);
   display: block;
   font-size: 24px;
-  color: #60A5FA;
+  color: var(--light-blue-principal);
   text-align: center;
   margin-bottom: 32px;
 }
@@ -177,6 +182,7 @@
   color: #6B7280;
   font-size: 14px;
   font-weight: 500;
+  font: var(--text-style);
 }
 
 .form-input {
@@ -212,22 +218,21 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .save-button, .cancel-button {
+  font: var(--text-button-style);
   padding: 12px 32px;
   border-radius: 8px;
-  font-size: 14px;
-  font-weight: 500;
   border: none;
   cursor: pointer;
   transition: background-color 0.2s ease;
 }
 
 .save-button {
-  background-color: #60A5FA;
+  background-color: var(--light-blue-principal);
   color: white;
 }
 
 .save-button:hover {
-  background-color: #3B82F6;
+  background-color: var(--light-blue-principal-hover);
 }
 
 .cancel-button {
