--- a/frontend/SAMI/src/app/views/vista-paciente/vista-paciente.component.css
+++ b/frontend/SAMI/src/app/views/vista-paciente/vista-paciente.component.css
@@ -1,11 +1,14 @@
 .dashboard {
     display: flex;
     height: 100vh;
+    overflow: hidden;
   }
   
   .content {
     flex: 1;
     padding: 20px;
+    overflow-y: auto;
+
   }
   
   header {
