--- a/frontend/SAMI/src/styles.css
+++ b/frontend/SAMI/src/styles.css
@@ -37,9 +37,13 @@ body, html {
   font: var(--text-button-style);
   border: none;
   padding: 10px 20px;
-  font-size: 16px;
   border-radius: 10px;
   cursor: pointer;
   width: 50%;
+}
+
+app-slidebar {
+  overflow-y: hidden; /* Previene el scroll en la barra lateral */
+  height: 100vh;
 }
 
