Linkeos entre pestañas

--- a/frontend/SAMI/src/app/components/slidebar/slidebar.component.html
+++ b/frontend/SAMI/src/app/components/slidebar/slidebar.component.html
@@ -5,8 +5,8 @@
     </div>
     <ul class="menu">
       <h2 class="tittle-menu"> Menú</h2>
-      <li><a href="#gestion"><i class="fa-regular fa-address-book"></i>Gestión de pacientes</a></li>
-      <li><a href="#citas"> <i class="fa-regular fa-calendar"></i>Citas médicas</a></li>
+      <li><a routerLink="/dashboard-principal"><i class="fa-regular fa-address-book"></i>Gestión de pacientes</a></li>
+      <li><a routerLink="/dashboard-citas"> <i class="fa-regular fa-calendar"></i>Citas médicas</a></li>
     </ul>
     <div class="profile">
       <h3>Perfil</h3>
