--- a/frontend/SAMI/src/app/views/dashboard-principal/dashboard-principal.component.html
+++ b/frontend/SAMI/src/app/views/dashboard-principal/dashboard-principal.component.html
@@ -122,7 +122,7 @@
           <td class="data-patient">{{ paciente.fechaEvaluacion }}</td>
           <td>
             <div class="actions">
-              <button class="button-standar">Ver más</button>
+              <button routerLink="/perfil-paciente" class="button-standar">Ver más</button>
               <button class="delete-action">
                 <i class="fa-solid fa-trash-can"></i>
               </button>
