Cambios en los estilos de la aplicacion y dashboard

--- a/frontend/SAMI/src/app/views/dashboard-principal/dashboard-principal.component.html
+++ b/frontend/SAMI/src/app/views/dashboard-principal/dashboard-principal.component.html
@@ -111,7 +111,7 @@
           </td>
           <td>
             <div class="actions">
-              <button class="button-standar">Ver más</button>
+              <button class="button-standar" routerLink="/perfil-paciente">Ver más</button>
               <button
                 class="delete-action"
                 (click)="deletePatient(paciente.id)"
