--- a/frontend/SAMI/src/app/views/citas-medicas/citas-medicas.component.html
+++ b/frontend/SAMI/src/app/views/citas-medicas/citas-medicas.component.html
@@ -37,7 +37,7 @@
               </div>
             </div>
           </ng-container>
-        </div>
+        </div>s
       </div>
       <div class="pendient-date">
         <h2>Solicitudes pendientes</h2>
